--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -67,7 +67,7 @@
                                 <a style="text-decoration:none;color:#333" target="_blank" href="{{subject.url}}">
                                   <h4>{{subject.title}}</h4>
                                 </a>
-                                <p><a style="text-decoration:none;color:#333" target="_blank" href="{{subject.url}}">{{subject.preview}}</a></p>
+                                <p><a style="text-decoration:none;color:#7d7d7d" target="_blank" href="{{subject.url}}">{{subject.preview}}</a></p>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
                               </div>
