category not features

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -25,7 +25,7 @@
           <!-- Sidebar -->
           <nav id="sidebar">
               <div class="sidebar-header">
-                  <h5 style="color:#333">Features</h5>
+                  <h5 style="color:#333">Category</h5>
               </div>
               <ul class="list-unstyled components">
                   <li class="active">
