--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -61,13 +61,17 @@
                                 <div class="mb-2" style="text-align:right">
                                   <small style="color:#b1b0b0;font-size:12px">{{subject.dateString}}</small>
                                   <span style="margin:6px">&middot;</span>
-                                  <small style="color:#b1b0b0;font-size:12px">{{site.name}}</small>
-                                  <img style="margin-left:6px;width:22px;border-radius:50%" src="{{{site.image}}}=s44-c" />
+                                  <a style="text-decoration:none" target="_blank" href="{{{site.url}}}">
+                                    <small style="color:#b1b0b0;font-size:12px">{{site.name}}</small>
+                                  </a>
+                                  <a target="_blank" href="{{{site.url}}}">
+                                    <img style="margin-left:6px;width:22px;border-radius:50%" src="{{{site.image}}}=s44-c" />
+                                  </a>
                                 </div>
-                                <a style="text-decoration:none;color:#333" target="_blank" href="{{subject.url}}">
+                                <a style="text-decoration:none;color:#333" target="_blank" href="{{{subject.url}}}">
                                   <h4>{{subject.title}}</h4>
                                 </a>
-                                <p><a style="text-decoration:none;color:#7d7d7d" target="_blank" href="{{subject.url}}">{{subject.preview}}</a></p>
+                                <p><a style="text-decoration:none;color:#7d7d7d" target="_blank" href="{{{subject.url}}}">{{subject.preview}}</a></p>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
                               </div>
