add comments link

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -61,6 +61,8 @@
                                 <div class="mb-2" style="text-align:right">
                                   <small style="color:#b1b0b0;font-size:12px">{{subject.dateString}}</small>
                                   <span style="margin:6px">&middot;</span>
+                                  <small style="color:#b1b0b0;font-size:12px">Comments</small>
+                                  <span style="margin:6px">&middot;</span>
                                   <a style="text-decoration:none" target="_blank" href="{{{site.url}}}">
                                     <small style="color:#b1b0b0;font-size:12px">{{site.name}}</small>
                                   </a>
