--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -20,26 +20,13 @@
 
 <div class="container pt-4 pb-4">
 	<div class="row justify-content-between">
-		<div class="col-md-8">
+		<div class="col-md-8 mx-auto">
       <div id="thread-container"></div>
       <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
       <button id="btn-submit-comment" class="mb-5 btn btn-success">Add Comment</button>
       <div id="comments-container"></div>
 		</div>
 
-		<div class="col-md-4 pl-4">
-      <div class="sticky-top">
-        <div class="mb-5" style="padding:24px;background:#dedafb">
-          <h2>Build Your Brand</h2>
-          <div class="text-center mb-4 mt-3">
-            <img style="max-width:200px" src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI" />
-          </div>
-          <p>Vertex 360 is a platform for content creators in the modern media age. Whether you manage a YouTube channel, podcast, blog, Instagram folowing, or all of the above, Vertex 360 provides the best way to deliver your content under a unified, coherent brand that you control.</p>
-          <a href="/about" class="btn btn-danger w-100">Learn More</a>
-        </div>
-      </div>
-
-		</div>
 	</div>
 </div>
   {{>footer}}
