--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -23,12 +23,12 @@
 		<div class="col-md-8 mx-auto">
       <div>
         <h3 class="mb-0">
-          <a target="_blank" style="text-decoration:none" href="{{thread.subject.url}}"><span>{{thread.subject.title}}</span></a>
+          <a target="_blank" style="text-decoration:none" href="{{{thread.subject.url}}}"><span>{{thread.subject.title}}</span></a>
         </h3>
         <small>{{thread.subject.dateString}}</small>
         <span style="margin:6px">&middot;</span>
         <small>
-          <a style="text-decoration:none" href="/site/{{thread.site.slug}}">{{thread.site.name}}</a>
+          <a target="_blank" style="text-decoration:none" href="{{{thread.site.url}}}">{{thread.site.name}}</a>
         </small>
       </div>
       <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
@@ -63,10 +63,9 @@
       var data = window.__PRELOADED__
       var user = data.user
       var site = data.site // full site data
-      var threadId = data.thread // ID number
+      var thread = data.thread
       var schema = data.schema // post, video, episode, etc
 
-      var thread = null // full thread data
       var comments = []
 
       var reloadUI = function(){
@@ -84,12 +83,12 @@
       }
 
       var fetchComments = function(){
-        console.log('FETCH COMMENTS: ' + JSON.stringify(thread))
-        window.vertexLib.getRequest('/api/comment?thread='+threadId, null, function(err, resp){
+        window.vertexLib.getRequest('/api/comment?thread='+thread.id, null, function(err, resp){
           if (err)
             return
 
           comments = resp.results
+          console.log('FETCH COMMENTS: ' + JSON.stringify(comments))
           reloadUI()
         })
       }
@@ -129,7 +128,7 @@
 
         var comment = {
           text: commentText,
-          thread: threadId,
+          thread: thread.id,
           profile: JSON.stringify({
             id: user.id,
             firstName: user.firstName,
@@ -151,6 +150,9 @@
           reloadUI()
         })
       })
+
+      fetchComments()
+      
     })()
   </script>
 </body>
