--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -21,15 +21,20 @@
 <div class="container pt-4 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8 mx-auto">
-      <div>
-        <h3 class="mb-0">
-          <a target="_blank" style="text-decoration:none" href="{{{thread.subject.url}}}"><span>{{thread.subject.title}}</span></a>
-        </h3>
-        <small>{{thread.subject.dateString}}</small>
-        <span style="margin:6px">&middot;</span>
-        <small>
-          <a target="_blank" style="text-decoration:none" href="{{{thread.site.url}}}">{{thread.site.name}}</a>
-        </small>
+      <div style="display:flex">
+        <div>
+          <img src="{{{thread.subject.image}}}=s220-c" />
+        </div>
+        <div style="flex:1">
+          <h3 class="mb-0">
+            <a target="_blank" style="text-decoration:none" href="{{{thread.subject.url}}}"><span>{{thread.subject.title}}</span></a>
+          </h3>
+          <small>{{thread.subject.dateString}}</small>
+          <span style="margin:6px">&middot;</span>
+          <small>
+            <a target="_blank" style="text-decoration:none" href="{{{thread.site.url}}}">{{thread.site.name}}</a>
+          </small>
+        </div>
       </div>
       <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
       <button id="btn-submit-comment" class="mb-5 btn btn-success">Add Comment</button>
