--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -22,8 +22,8 @@
 	<div class="row justify-content-between">
 		<div class="col-md-8 mx-auto">
       <div style="display:flex">
-        <div>
-          <img src="{{{thread.subject.image}}}=s220-c" />
+        <div class="mr-3">
+          <img style="max-width:110px" src="{{{thread.subject.image}}}=s220-c" />
         </div>
         <div style="flex:1">
           <h3 class="mb-0">
