link to comments page

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -61,7 +61,7 @@
                                 <div class="mb-2" style="text-align:right">
                                   <small style="color:#b1b0b0;font-size:12px">{{subject.dateString}}</small>
                                   <span style="margin:6px">&middot;</span>
-                                  <a style="text-decoration:none" href="#">
+                                  <a style="text-decoration:none" href="/feed/{{subject.slug}}">
                                     <small style="color:#b1b0b0;font-size:12px">Comments</small>
                                   </a>
                                   <span style="margin:6px">&middot;</span>
