--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -127,7 +127,7 @@
             return
           }
 
-          console.log('Comment Created: ' + JSON.stringify(resp))
+          // console.log('Comment Created: ' + JSON.stringify(resp))
           $('#text-area-comment').val('')
           comments.unshift(resp.result)
           reloadUI()
