set comment thread

--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -111,7 +111,7 @@
 
         var comment = {
           text: commentText,
-          thread: thread.id,
+          thread: thread.subject.id,
           profile: JSON.stringify({
             id: user.id,
             firstName: user.firstName,
