--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -45,7 +45,22 @@
       </div>
       <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
       <button id="btn-submit-comment" class="mb-5 btn btn-success">Add Comment</button>
-      <div id="comments-container"></div>
+      <div id="comments-container">
+        
+        {{#comments}}
+        <div class="mt-2 d-flex justify-content-between post-preview">
+          <div class="pr-4">
+            <div class="card-text text-muted small">
+                <a href="#">{{ profile.username }}</a>
+                <span style="margin:6px">&middot;</span>
+                <span>{{ dateString }}</span>
+            </div>
+            <p class="text-muted">{{{text}}}</p>
+          </div>
+        </div>
+        {{/comments}}
+
+      </div>
 		</div>
 
 	</div>
