--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -16,6 +16,46 @@
 
     {{>head}}
     <link rel="stylesheet" href="{{{cdn}}}/css/sidebar.css" />
+    <style>
+      .thread-preview {
+        border: 1px solid #ededed;
+        border-radius: 6px;
+        display: flex
+      }
+
+      .thread-preview-img {
+        padding: 0px;
+      }
+
+      .thread-preview-img img {
+        max-width: 190px;
+        max-height: 190px;
+      }
+
+      .thread-preview-container {
+        flex: 1;
+        padding: 16px;
+      }
+
+      .thread-preview-container small {
+        color: #b1b0b0;
+        font-size: 12px;
+      }
+
+      .thread-preview-container span {
+        margin: 6px;
+      }
+
+      .thread-preview-container a {
+        text-decoration: none;
+      }
+
+      .thread-preview-container img {
+        border-radius: 50%;
+        margin-left: 6px;
+        width: 22px;
+      }
+    </style>
 </head>
     <body>
       {{>nav}}
@@ -54,31 +94,25 @@
 
                         <div class="col-md-9">
                           {{#threads.recent}}
-                            <div class="bg-white mb-4" style="border:1px solid #ededed;border-radius:6px;display:flex">
-                              <div style="padding:0px">
+                            <div class="bg-white mb-4 thread-preview">
+                              <div class="thread-preview-img">
                                 <a target="_blank" href="{{subject.url}}">
-                                  <img style="max-width:190px;max-height:190px" src="{{subject.image}}=s300-c" />
+                                  <img src="{{subject.image}}=s300-c" />
                                 </a>
                               </div>
-                              <div style="flex:1;padding:16px">
+                              <div class="thread-preview-container">
                                 <div class="mb-2" style="text-align:right">
-                                  <small style="color:#b1b0b0;font-size:12px">{{subject.dateString}}</small>
-                                  <span style="margin:6px">&middot;</span>
-                                  <a style="text-decoration:none" href="/feed/{{subject.slug}}">
-                                    <small style="color:#b1b0b0;font-size:12px">Comments</small>
-                                  </a>
-                                  <span style="margin:6px">&middot;</span>
-                                  <a style="text-decoration:none" target="_blank" href="{{{site.url}}}">
-                                    <small style="color:#b1b0b0;font-size:12px">{{site.name}}</small>
-                                  </a>
-                                  <a target="_blank" href="{{{site.url}}}">
-                                    <img style="margin-left:6px;width:22px;border-radius:50%" src="{{{site.image}}}=s44-c" />
-                                  </a>
+                                  <small>{{subject.dateString}}</small>
+                                  <span>&middot;</span>
+                                  <a href="/feed/{{subject.slug}}"><small>Comments</small></a>
+                                  <span>&middot;</span>
+                                  <a target="_blank" href="{{{site.url}}}"><small>{{site.name}}</small></a>
+                                  <a target="_blank" href="{{{site.url}}}"><img src="{{{site.image}}}=s44-c" /></a>
                                 </div>
-                                <a style="text-decoration:none;color:#333" target="_blank" href="{{{subject.url}}}">
+                                <a style="color:#333" target="_blank" href="{{{subject.url}}}">
                                   <h4>{{subject.title}}</h4>
                                 </a>
-                                <p><a style="text-decoration:none;color:#7d7d7d" target="_blank" href="{{{subject.url}}}">{{subject.preview}}</a></p>
+                                <p><a style="color:#7d7d7d" target="_blank" href="{{{subject.url}}}">{{subject.preview}}</a></p>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
                               </div>
@@ -94,52 +128,6 @@
       </div>
 
       {{>auth}}
-
-      <div class="modal fade" id="template-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" style="max-width:960px" role="document">
-          <div class="modal-content" style="border-radius:4px">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Launch Site</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div id="template-modal-content" class="modal-body" style="display:flex"></div>
-            <div class="text-left" style="padding:1.5rem;border-top:1px solid #ededed">
-              <input id="input-site-name" type="text" class="form-control mr-3" placeholder="Your Site Name" style="display:initial;width:290px;height:48px;padding-top:2px;background:#fffffa" />
-              <div style="display:inline-block" id="btn-launch-container"><button id="btn-launch-template" type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <script type="text/template" id="tpl-modal">
-        <div class="modal-body" style="display:flex">
-          <div style="flex:1">
-            <div class="mb-2">
-              <img src="<% image %>=s282-c" />
-            </div>
-            <div>
-              <%#images%>
-              <img class="preview-image" src="<% . %>=s50-c" />
-              <%/images%>
-            </div>
-          </div>
-          <div style="flex:2">
-            <a target="_blank" style="float:right" href="https://<% url %>" class="btn btn-sm btn-danger">Live Example</a>
-            <h3><% name %></h3>
-            <p><%{description}%></p>
-            <h4 class="mb-0">Includes</h4>
-            <ol style="padding-left:16px">
-              <li>YouTube Transcriptions</li>
-              <li>Podcast Player</li>
-              <li>Instagram Gallery</li>
-              <li>Blog</li>
-              <li>Email Subscribers</li>
-            </ol>
-          </div>
-        </div>
-      </script>
 
       <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
       <script type="text/javascript" src="{{{cdn}}}/scripts/vertex-lib.js"></script>
@@ -157,7 +145,6 @@
         (function(){
           var data = window.__PRELOADED__
           var threads = data.threads // this is an object
-          // var threadsMap = data.threadsMap
           var currentCategory = 'recent'
 
           var reloadUI = function(){
@@ -176,7 +163,7 @@
               window.scrollTo(0, 0)
 
               var category = $(this).html().toLowerCase()
-              console.log('click sidebar: ' + category)
+              // console.log('click sidebar: ' + category)
               currentCategory = category
               $(this).parent().addClass('active')
 
@@ -190,7 +177,6 @@
                 var results = resp.results
                 console.log(JSON.stringify(results))
                 reloadUI()
-
               })
             })
           })
