--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -146,7 +146,7 @@
               <a target="_blank" href="<%{site.url}%>"><img src="<%{site.image}%>=s44-c" /></a>
             </div>
             <a style="color:#333" target="_blank" href="<%{subject.url}%>">
-              <h4><% subject.title}}</h4>
+              <h4><% subject.title %></h4>
             </a>
             <p><a style="color:#7d7d7d" target="_blank" href="<%{subject.url}%>"><% subject.preview %></a></p>
           </div>
