show recent threads

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -165,7 +165,7 @@
            				<nav class="main_nav_underline">
              				<ul style="width:100%">
 
-                       {{#threads}}
+                       {{#threads.recent}}
                        <li class="post-preview" id="li-{{id}}">
                          <div class="post-preview-container">
                            <a id="{{id}}" class="sidebar-link" href="#">
@@ -180,7 +180,7 @@
                            </a>
                          </div>
                        </li>
-                       {{/threads}}
+                       {{/threads.recent}}
              				</ul>
            				</nav>
            			</div>
