--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -28,6 +28,12 @@
       border-bottom:1px solid #ddd
     }
 
+    .sidebar-link a {
+      font-size: 16px;
+      font-weight: 400;
+      color: #333;
+    }
+
     .main_nav_underline {
       width: 100%;
       background: #f1f7f8;
@@ -35,6 +41,7 @@
     }
 
     .post-preview {
+      display: flex;
       border-bottom: 1px solid #ddd;
       width: 100% !important;
       padding: 0px;
@@ -54,8 +61,8 @@
     }
 
     .post-preview-container img {
-      width: 64px;
-      height: 64px;
+      width: 80px;
+      height: 80px;
       max-width: 100% !important;
       margin-right: 12px !important;
       border-radius: 4px;
@@ -87,17 +94,19 @@
 
                   {{#threads}}
                   <li class="post-preview" id="li-{{id}}">
-                    <div class="post-preview-container">
+                    <a id="{{id}}" class="sidebar-link" href="#">
+                      <img src="{{{subject.image}}}=s128-c" alt="Vertex 360" />
+                    </a>
+                    <div style="flex:1" class="post-preview-container">
                       <a id="{{id}}" class="sidebar-link" href="#">
-                        <img src="{{{subject.image}}}=s128-c" alt="Vertex 360" />
                         {{subject.title}}
                       </a>
-                    </div>
-                    <div style="font-size:12px;height:22px;text-align:right;">
-                      <a target="_blank" href="{{{site.url}}}">
-                        <img style="border-radius:50%;margin-left:8px;margin-bottom:9px;float:right" src="{{{site.image}}}=s28-c" />
-                        <span style="float:initial;display:inline-block;margin-top:6px">{{subject.dateString}} | {{site.name}}</span>
-                      </a>
+                      <div style="font-size:12px;height:22px;text-align:right;">
+                        <a target="_blank" href="{{{site.url}}}">
+                          <img style="border-radius:50%;margin-left:8px;margin-bottom:9px;float:right" src="{{{site.image}}}=s28-c" />
+                          <span style="float:initial;display:inline-block;margin-top:6px">{{subject.dateString}} | {{site.name}}</span>
+                        </a>
+                      </div>
                     </div>
                   </li>
                   {{/threads}}
@@ -168,8 +177,8 @@
                        {{#threads.recent}}
                        <li class="post-preview" id="li-{{id}}">
                          <div class="post-preview-container">
-                           <a id="{{id}}" class="sidebar-link" href="#">
-                             <img src="{{{subject.image}}}=s128-c" alt="Vertex 360" />
+                           <a id="{{id}}" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
+                             <img src="{{{subject.image}}}=s160-c" alt="Vertex 360" />
                              {{subject.title}}
                            </a>
                          </div>
