thread detail styling

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -72,7 +72,7 @@
 
 <body id="mobile_wrap">
     <div id="panel-overlay" class="panel-overlay"></div>
-    
+
     <div class="panel panel-right panel-reveal">
       <div class="user_login_info" style="background:#f1f7f8;border-left:1px solid #ddd">
         <div style="padding:12px;background:#f9f9f9">
@@ -132,17 +132,17 @@
                        {{#threads.recent}}
                        <li class="post-preview" id="li-{{id}}">
                          <div style="display:flex" class="post-preview-container">
-                           <a id="{{id}}" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
+                           <a style="flex:1" id="{{id}}" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
                              <img src="{{{subject.image}}}=s160-c" alt="Vertex 360" />
                            </a>
-                           <div style="flex:1">
+                           <div style="flex:3">
                              <a id="{{id}}" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
                                {{subject.title}}
                              </a>
                              <div style="font-size:12px;height:22px;text-align:right;">
                                <a target="_blank" href="{{{site.url}}}">
-                                 <img style="border-radius:50%;margin-left:8px;margin-bottom:9px;float:right" src="{{{site.image}}}=s28-c" />
-                                 <span style="float:initial;display:inline-block;margin-top:6px">{{subject.dateString}} | {{site.name}}</span>
+                                 <span>{{subject.dateString}} | {{site.name}}</span>
+                                 <img style="border-radius:50%;margin-left:8px;height:22px;width:22px" src="{{{site.image}}}=s28-c" />
                                </a>
                              </div>
                            </div>
