--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -50,7 +50,7 @@
 
     .post-preview-container {
       display: flex;
-      padding: 12px
+      padding: 0px 0px 4px 2px;
     }
 
     .post-preview-container a {
@@ -65,7 +65,7 @@
       height: 80px;
       max-width: 100% !important;
       margin-right: 12px !important;
-      border-radius: 4px;
+      border-radius: 0px;
     }
   </style>
 </head>
@@ -136,12 +136,12 @@
                              <img src="{{{subject.image}}}=s160-c" alt="Vertex 360" />
                            </a>
                            <div style="flex:3">
-                             <a id="{{id}}" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
+                             <a id="{{id}}" style="font-weight:400;font-size:14px" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
                                {{subject.title}}
                              </a>
                              <div style="font-size:12px;height:22px;text-align:right;">
                                <a target="_blank" href="{{{site.url}}}">
-                                 <span>{{subject.dateString}} | {{site.name}}</span>
+                                 {{subject.dateString}} | {{site.name}}
                                  <img style="border-radius:50%;margin-left:8px;height:22px;width:22px" src="{{{site.image}}}=s28-c" />
                                </a>
                              </div>
