--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -139,8 +139,8 @@
                              <a id="{{id}}" style="font-weight:400;font-size:14px" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
                                {{subject.title}}
                              </a>
-                             <div style="font-size:12px;height:22px;text-align:right;">
-                               <a target="_blank" href="{{{site.url}}}">
+                             <div>
+                               <a style="font-size:12px" target="_blank" href="{{{site.url}}}">
                                  {{subject.dateString}} | {{site.name}}
                                </a>
                                <img style="border-radius:50%;margin-left:8px;height:22px;width:22px" src="{{{site.image}}}=s28-c" />
