--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -139,11 +139,11 @@
                              <a style="font-size:12px" target="_blank" href="{{{site.url}}}">
                                {{subject.dateString}}
                              </a>
-                             <span>|</span>
+                             <span style="padding:none">middot;</span>
                              <a style="font-size:12px" target="_blank" href="{{{site.url}}}">
                                {{site.name}}
                              </a>
-                             <span>|</span>
+                             <span style="padding:none">middot;</span>
                              <a style="font-size:12px" target="_blank" href="{{{site.url}}}">
                                Comments
                              </a>
