--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -136,15 +136,15 @@
                              <img src="{{{subject.image}}}=s160-c" alt="Vertex 360" />
                            </a>
                            <div style="flex:3">
-                             <a style="font-size:12px" target="_blank" href="{{{site.url}}}">
+                             <a style="font-size:12px;clear:unset;width:initial" target="_blank" href="{{{site.url}}}">
                                {{subject.dateString}}
                              </a>
                              <span style="padding:none">&middot;</span>
-                             <a style="font-size:12px" target="_blank" href="{{{site.url}}}">
+                             <a style="font-size:12px;clear:unset;width:initial" target="_blank" href="{{{site.url}}}">
                                {{site.name}}
                              </a>
                              <span style="padding:none">&middot;</span>
-                             <a style="font-size:12px" target="_blank" href="{{{site.url}}}">
+                             <a style="font-size:12px;clear:unset;width:initial" target="_blank" href="{{{site.url}}}">
                                Comments
                              </a>
                              <a id="{{id}}" style="font-weight:400;font-size:14px" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
