--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -139,11 +139,11 @@
                              <a style="font-size:12px;clear:unset;width:initial" target="_blank" href="{{{site.url}}}">
                                {{subject.dateString}}
                              </a>
-                             <span style="padding:none">&middot;</span>
+                             <span style="padding:0px">&middot;</span>
                              <a style="font-size:12px;clear:unset;width:initial" target="_blank" href="{{{site.url}}}">
                                {{site.name}}
                              </a>
-                             <span style="padding:none">&middot;</span>
+                             <span style="padding:0px">&middot;</span>
                              <a style="font-size:12px;clear:unset;width:initial" target="_blank" href="{{{site.url}}}">
                                Comments
                              </a>
