--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -136,6 +136,11 @@
                              <img src="{{{subject.image}}}=s160-c" alt="Vertex 360" />
                            </a>
                            <div style="flex:3">
+                             <div>
+                               <a id="{{id}}" style="font-weight:400;font-size:14px" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
+                                 {{subject.title}}
+                               </a>
+                             </div>
                              <a style="font-size:12px;clear:unset;width:initial" target="_blank" href="{{{site.url}}}">
                                {{subject.dateString}}
                              </a>
@@ -144,11 +149,8 @@
                                {{site.name}}
                              </a>
                              <span style="padding:0px;margin:2px 8px">&middot;</span>
-                             <a style="font-size:12px;clear:unset;width:initial" target="_blank" href="{{{site.url}}}">
+                             <a style="font-size:12px;clear:unset;width:initial" href="/feed/{{subject.slug}}">
                                Comments
-                             </a>
-                             <a id="{{id}}" style="font-weight:400;font-size:14px" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
-                               {{subject.title}}
                              </a>
                            </div>
                          </div>
