--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -137,7 +137,7 @@
                            </a>
                            <div style="flex:3">
                              <div>
-                               <a id="{{id}}" style="font-weight:400;font-size:14px" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
+                               <a id="{{id}}" style="font-weight:400;font-size:14px;margin-bottom:10px" class="sidebar-link" target="_blank" href="{{{subject.url}}}">
                                  {{subject.title}}
                                </a>
                              </div>
