--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -198,7 +198,8 @@
                                     <div class="media-body">
                                         <h5 class="mt-0">Built-in Analytics (coming soon!)</h5>
                                         <span class="text-muted">
-                                          Page views, visitors, referrers - Vertex 360 sites come installed with all the analytics you need to make the right decisions.
+                                          Influencers need to know what content generates the most traffic.
+                                          Vertex 360 sites come installed with all the analytics you need to make the right decisions.
                                         </span>
                                     </div>
                                 </div>
@@ -225,7 +226,8 @@
                     <div class="col-md-6 order-2 order-md-1 my-md-auto">
                         <h1>Professional Design</h1>
                         <p class="text-muted lead">
-                          Our templates are ready to go, "out-of-the-box" and look sleek, modern and professional. Your fans will be impressed with the
+                          Your influencer website represents your brand. Strongly convey your brand with our
+                          sleek, modern and professional templates. Your fans will be impressed with the
                           sophisticated look of your site and new visitors will have a great first impression.
                         </p>
                     </div>
@@ -247,7 +249,7 @@
                     <div class="col-md-6 my-md-auto">
                         <h1>Easy Maintenance</h1>
                         <p class="text-muted lead">
-                          Simply input your content and walk away - no coding required! No messing with confusing editors, drag & drop tools, or ridiculously complicated features for "beginners". On Vertex 360, simply input your content and move on with your life, business, family - more important stuff
+                          Simply input your content and walk away - no coding required! No messing with confusing editors, drag & drop tools, or ridiculously complicated features for "beginners". On Vertex 360, your influencer website is built for speed and simplicity so you can focus on growing your audience!
                         </p>
                     </div>
                 </div>
@@ -261,7 +263,7 @@
                     <div class="col-md-7 mx-auto text-center">
                         <h1>How It Works</h1>
                         <p class="lead">
-                          Setting up a site Vertex 360 is super sipmle.
+                          Setting up a website on Vertex 360 is super sipmle.
                         </p>
                     </div>
                 </div>
